# minipix

./: .env  .gitignore  Cargo.toml  dev.sh  docker-compose.yml
.sqlx/: query-0dff9f9fed00560866dae5107fb4e6b90089cbece230a0a89b385441255dc688.json  query-1a14d1baec278d77e5ea052a7d058b801ed46e6bc7777d84e923e48f6c6db3fd.json  query-8536e3987eba1fac16b491ee1d2503f81907006436949bec4be5c860054fb13b.json  query-885a17f6d3be6282024508e6985cf4f6298b2a6eeb958f258a8ab5db9f311e05.json  query-d43185d7e18faca55da3c7d0560e646b10f849e8cb920339b19e4caabe067806.json
db/: script.sql
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
src/: main.rs  persistence.rs
src/models/: client.rs  mod.rs  transaction.rs
