[package]
name = "minipix"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8.2", features = [
    "chrono",
    "macros",
    "postgres",
    "runtime-tokio",
] }
tower = "0.5.1"
tower-http = { version = "0.6.0", features = ["fs", "cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
dotenv = "0.15.0"
